fix smaller screen alignment

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -41,6 +41,7 @@ body {
 @media only screen and (max-width: 992px) {
   .pic-header {
     max-height: 25%;
+    margin: 0 58px 0 0;
     clear: both;
   }
 }
